# advent-of-code

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: aoc-badges.yml
aoc/: __init__.py
aoc/2021/: day11.py  day4.py  day5.py  day6.py  day8.py
aoc_fergus/: __init__.py
aoc_fergus/2021/: day02.py  day03.py  day05.py  day07.py  day08.py  day09.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day3.py  day7.py  day9.py
aoc_fergus/2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
aoc_fergus/2023/: day01.py
