[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Fergus Longley <ferguslongley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."adventofcode.user"]
"furgoose" = "aoc:solve"