[tool.poetry]
name = "aoc-fergus"
version = "0.1.0"
description = ""
authors = ["Fergus Longley <ferguslongley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
prospector = "^1.8.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."adventofcode.user"]
"furgoose" = "aoc_fergus:solve"